--- a/KhanzaAntrianLoket/nbproject/private/private.properties
+++ b/KhanzaAntrianLoket/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=true
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/thama/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=C:\\Users\\admin_2\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
